// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box Box renders correctly  1`] = `
<DocumentFragment>
  <div
    class="sui-box emotion-0"
  />
</DocumentFragment>
`;

exports[`Box Box renders with system 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  background-color: #bd4932;
  height: 100px;
  margin-right: auto;
  margin-left: auto;
  padding: 16px;
}

<div
    class="sui-box emotion-0"
  />
</DocumentFragment>
`;
